--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/core": "^7.13.0",
+    "@react-firebase/auth": "^0.2.10",
     "@react-firebase/database": "^0.3.11",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
