--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-sliding-pane": "^7.0.0",
+    "react-zoom-pan-pinch": "^2.0.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
