Physics sim and logic

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@trendmicro/react-sidenav": "^0.5.0",
     "bootstrap": "^4.6.0",
     "firebase": "^8.6.3",
+    "firebase-admin": "^9.10.0",
+    "firebase-functions": "^3.14.1",
+    "nvm": "^0.0.4",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
