--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-sliding-pane": "git+https://github.com/joego2124/sliding-pane.git",
+    "react-sliding-pane": "https://github.com/joego2124/sliding-pane.git",
     "react-zoom-pan-pinch": "^2.0.2",
+    "serve": "^12.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "now-build": "CI=false npm run build"
