--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "now-build": "CI=false npm run build"
+    "now-build": "npm run build"
   },
   "eslintConfig": {
     "extends": [
